--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope-o"></i></a>
             <div class="profile">
                  <h1 class="site-title abel uppercase text-center">Web Design猛勉強中 <span>杉山　はるこ</span></h1>
-                 <img src="./images/img_profile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                 <img src="./images/img_profile.png" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
                 <p>三重県在住の杉山はるこです。オンラインスクールでWeb制作について学び、今までとは全く違う分野であるWebデザインの仕事をやってみたいと思い勉強中です。今後さらにWeb制作の技術や知識を身につけて、Webサイトの運用もできるようになりたいと思っています。</p>
             </div>
         </header>
