--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
+         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Web Designer - 杉山　はるこ</title>
         <meta name="description" content="Webデザイナーを目指す杉山はるこのポートフォリオサイトです。">
         <meta name="keywords" content="Web, デザイン, デザイナー, ポートフォリオ, Web制作">
@@ -15,7 +16,7 @@
             <div class="profile">
                  <h1 class="site-title abel uppercase text-center">Web Design猛勉強中 <span>杉山　はるこ</span></h1>
                  <img src="./images/img_profile.png" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
-                <p>三重県在住の杉山はるこです。オンラインスクールでWeb制作について学び、今までとは全く違う分野であるWebデザインの仕事をやってみたいと思い勉強中です。今後さらにWeb制作の技術や知識を身につけて、Webサイトの運用もできるようになりたいと思っています。</p>
+                <p>三重県在住の杉山はるこです。オンラインスクールでWeb制作について学び、今までとは全く違う分野であるWebデザインの仕事をしてみたいと思い勉強中です。今後さらにWeb制作の技術や知識を身につけて、Webサイトの運用もできるようになりたいと思っています。</p>
             </div>
         </header>
         <main>
